--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="../images/logo.jpg" alt="Dhanush profile picture" />
+        <img src="logo.jpg" alt="Dhanush profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -54,13 +54,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="../images/linkedin.png"
+            src="linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/dhanush-g-278705171'"
           />
           <img
-            src="../images/github.png"
+            src="github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/Dhanush295?tab=repositories'"
@@ -74,7 +74,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="../images/me.jpg"
+            src="me.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -83,7 +83,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="../images/skills.png"
+                src="skills.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -92,7 +92,7 @@
             </div>
             <div class="details-container">
               <img
-                src="../images/education.png"
+                src="education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -114,7 +114,7 @@
         </div>
       </div>
       <img
-        src="../images/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -130,7 +130,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -141,7 +141,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -152,7 +152,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -163,7 +163,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -180,7 +180,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -191,7 +191,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -202,7 +202,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -213,7 +213,7 @@
               </article>
               <article>
                 <img
-                  src="../images/checkmark.png"
+                  src="checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -227,7 +227,7 @@
         </div>
       </div>
       <img
-        src="../images/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -241,7 +241,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../images/todo.png"
+                src="todo.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -259,7 +259,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../images/WeatherApp.png"
+                src="WeatherApp.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -278,7 +278,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../images/snake.png"
+                src="snake.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -296,7 +296,7 @@
         </div>
       </div>
       <img
-        src="../images/arrow.png"
+        src="arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -308,7 +308,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="../images/email.png"
+            src="email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
