--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('../images/resume_updated.pdf')"
+            onclick="window.open('resume_updated.pdf')"
           >
             Download CV
           </button>
