--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         </div>
         <div class="contact-info-container">
           <
-            src="../images/linkedin.png"
+            src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
