--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <p><a href="mailto:dhanushg295@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
-          <
+          <img
             src="linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
