--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:dhanushg295@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:dhanushg295@gmail.com">dhanushg295@gmail.com"></a></p>
         </div>
         <div class="contact-info-container">
           <img
