--- a/index.html
+++ b/index.html
@@ -241,16 +241,16 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="todo.png"
+                src="CourseSelling-App.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">ToDo App</h2>
+            <h2 class="experience-sub-title project-title">CourseSelling App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Dhanush295/Todo-Application'"
+                onclick="location.href='https://github.com/Dhanush295/CourseSellingApp'
               >
                 Github
               </button>
@@ -259,16 +259,16 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="WeatherApp.png"
+                src="ExpenseTracking-App"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Weather App</h2>
+            <h2 class="experience-sub-title project-title">Expense Tracking App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Dhanush295/Weather-App'"
+                onclick="location.href='https://github.com/Dhanush295/Expense-Tracker'
               >
                 Github
               </button>
