--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 />
                 <div>
                   <h3>React</h3>
-                  <p>Intermediate</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -146,8 +146,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p>intermediate</p>
+                  <h3>NextJS</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -157,8 +157,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Intermediate</p>
+                  <h3>MUI</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -168,7 +168,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
+                  <h3>MUI</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -178,17 +178,6 @@
           <div class="details-container">
             <h2 class="experience-sub-title">Backend</h2>
             <div class="article-container">
-              <article>
-                <img
-                  src="checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
               <article>
                 <img
                   src="checkmark.png"
@@ -207,7 +196,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
+                  <h3> Postgres</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -218,7 +207,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>GraphQl</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Trpc</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -250,7 +250,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Dhanush295/CourseSellingApp'
+                onclick="location.href='https://github.com/Dhanush295/CourseSellingApp'"
               >
                 Github
               </button>
@@ -268,7 +268,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Dhanush295/Expense-Tracker'
+                onclick="location.href='https://github.com/Dhanush295/Expense-Tracker'"
               >
                 Github
               </button>
