--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="ExpenseTracking-App"
+                src="ExpenseTracking-App.png"
                 alt="Project 2"
                 class="project-img"
               />
